--- a/help.html
+++ b/help.html
@@ -59,7 +59,7 @@ no programming knowledge or additional software installation</div>
  <div class="container">
   <h2>Example Data
 </h2>
-  <p><a href="https://www.uibk.ac.at/microbiology/serivces/qrat">Example dataset (zip)</a></p>
+  <p><a href="https://fileshare.uibk.ac.at/f/f13ba887df05437483a2/?dl=1">Example dataset (zip)</a></p>
 </div> 
 
 <hr>
