--- a/help.html
+++ b/help.html
@@ -27,6 +27,13 @@ no programming knowledge or additional software installation</div>
 </div> 
 <hr>
 
+<h1>Important</h1>
+
+ <div class="container">
+  <h2>Amplification Efficiencies
+</h2>
+  <p>For the validity of ∆∆Cq calculations the amplification efficiencies of all primers for the target and the reference genes have to be approximately equal and close to 1 (100%) as stated by <a href="https://doi.org/10.1006/meth.2001.1262">Livak and Schmittgen</a>.</div> 
+
 <h1>Getting Help</h1>
 
  <div class="container">
