--- a/help.html
+++ b/help.html
@@ -84,7 +84,7 @@ no programming knowledge or additional software installation</div>
 </div>
 <p></p>
 <embed
-    src="qRAT_User_Guide.pdf#toolbar=0&navpanes=0&scrollbar=0"
+    src="www/qRAT_User_Guide.pdf#toolbar=0&navpanes=0&scrollbar=0"
     type="application/pdf"
     frameBorder="0"
     scrolling="auto"
