--- a/help.html
+++ b/help.html
@@ -57,7 +57,8 @@ no programming knowledge or additional software installation</div>
   <h2>Contact Us
 <small class="text-muted">for help and suggestions</small>
 </h2>
-  <p>Web: <a href="https://www.uibk.ac.at/microbiology/services/qrat">qRAT Homepage</a></p>
+<p>Web: <a href="https://www.uibk.ac.at/microbiology/services/qrat">qRAT Homepage</a></p>
+<p>GitHub: <a href="https://github.com/DaniFlat/qRAT">qRAT GitHub Repository</a></p>
 <p>Mail: <a href="https://www.uibk.ac.at/microbiology/team/daniel_flatschacher/">Daniel Flatschacher @ UIBK</a></p>
 </div> 
 
