--- a/help.html
+++ b/help.html
@@ -21,15 +21,13 @@ no programming knowledge or additional software installation</div>
 
 <hr>
  <div class="container">
-  <h2>Citation
+  <h2>Citing qRAT
 </h2>
   <p>Please site our publication if you use qRAT in your research:</p>
-	<p>Flatschacher, D., Speckbacher, V. &amp; Zeilinger, S. qRAT: an R-based stand-alone application for relative expression analysis of RT-qPCR data.
-                    <i>BMC Bioinformatics</i> <b>23, </b>286 (2022). https://doi.org/10.1186/s12859-022-04823-7</p>
-	<p>If you use ddCq values, please also cite the paper for <a href="https://doi.org/doi:10.18129/B9.bioc.ddCt">ddCt</a></p>
-	<p>If you use the statistical analysis, please also cite the paper for <a href="https://doi.org/doi:10.18129/B9.bioc.limma">limma</a></p>
 </div> 
 <hr>
+
+<h1>Important</h1>
 
  <div class="container">
   <h2>Amplification Efficiencies
